Fix star width to prevent flickering effect.

--- a/level_omega/css/dev.css
+++ b/level_omega/css/dev.css
@@ -693,7 +693,7 @@ body.not-front #main-content .node {
 .block-any_vote .widget ul.any_vote_points_widget {
   width: 183px;
   height: 32px;
-  padding: 45px 0 40px 7px;
+  padding: 20px 0 35px 7px;
 }
 
 .block-any_vote .widget .any_vote_points_widget,
@@ -703,7 +703,10 @@ body.not-front #main-content .node {
   text-align: center;
 }
 .block-any_vote .widget .any_vote_points_widget li {
-  display: inline;
+  display: block;
+  float: left;
+  width: 32px;
+  height: 32px;
 }
 
 .widget .any_vote_points_widget a,
